Alterando o nome do repositório.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Uberdanalmeida/github.iogi/Buscador-de-ceps",
+  "homepage": "https://Uberdanalmeida/github.iogi/buscar-ceps",
   "name": "projeto",
   "private": true,
   "version": "0.0.0",
